# log2word

./: .gitignore  CMakeLists.txt  README.md
include/: log2word.hpp  log2word__project.hpp
include/log2word/: log2word.hpp
include/log2word/common/io/: file_loader.hpp  logger.hpp
include/log2word/common/threading/: parallel_for.hpp
include/log2word/common/timing/: scoped_timer.hpp
include/log2word/core/: core.hpp  feedback.hpp  precalculate_feedback.hpp  word_list.hpp
include/log2word/solver/: feedback.hpp  precalculate_feedback.hpp  solver.hpp
include/solver/: logger.hpp
src/: main.cpp
